# testipc1

./: settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/androidTest/java/com/yyf/testipc1/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/aidl/com/yyf/testipc1/: IDateTimeService.aidl
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/yyf/testipc1/: BackgroundVideoRecorderService.java  DateTimeService.java  ExampleAppWidgetProvider.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml  example_app_widget.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: appwidget_provider.xml  example_app_widget_info.xml
app/src/test/java/com/yyf/testipc1/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
